Read multi-line file fixtures through FileUtil, from text blocks
First of four batches converting multi-line test fixtures to text blocks,
now that test sources compile at Java 17 (#3688). This one covers fixtures
that represent file contents.

Two shapes, both ending at the same place. Tests that already wrote a
temp file built its content from "a\nb\nc" strings; those become text
blocks passed to Files.writeString. Tests that held /proc content in an
Arrays.asList and handed it straight to the parser now write that content
to a temp file and read it back through FileUtil.readFile, which is the
call production makes:

    return parseMemInfo(FileUtil.readFile(ProcPath.MEMINFO));

so the List<String> under test is produced the same way at runtime and in
the test, rather than being assembled by hand in a shape that only
resembles it.

That is also why this batch needs no separate verification of the fixture
text: the round trip through FileUtil is the verification. A text block
converted to a List by other means can silently lose a tab or a trailing
space and still satisfy a lenient parser; content written to a file and
read back cannot.

Fixtures converted here are /proc/meminfo, /proc/vmstat, cgroup cpu.stat
and friends, sysfs GPU and power-supply attributes, bluetoothctl and
asound node contents.

One fixture keeps its closing delimiter on the last content line rather
than its own: /proc/asound/cardN/codec#0 has no trailing newline, and a
text block only omits the final newline in that form.